Update models.py and eday_checklist_form.html were updated to accommodated new fields to store votes for each contesting parties per state. A migration was done for this purpose and also added too. Further updates would still have to be done to made to optimise database access.

--- a/psc/templates/psc/eday_checklist_form.html
+++ b/psc/templates/psc/eday_checklist_form.html
@@ -162,7 +162,97 @@
 						    <tr>
 							<td>&nbsp;</td><td>DH</td><td>{{ form.DH.help_text }}</td><td><input name='{{ form.DH.html_name }}' type='text' class='bigbox2' value="{{form.initial.DH|default:''}}"></td><td><input name='{{ form2.DH.html_name }}' type='text' class='bigbox2' value="{{form2.initial.DH|default:''}}"></td><td><input name='{{form3.DH.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.DH|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.DH.name }}"></td>
 						    </tr>
-							<tr>
+						    <tr>
+							<td>&nbsp;</td><td>EA</td><td>{{ form.EA.help_text }}</td><td><input name='{{ form.EA.html_name }}' type='text' class='bigbox2' value="{{form.initial.EA|default:''}}"></td><td><input name='{{ form2.EA.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EA|default:''}}"></td><td><input name='{{form3.EA.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EA|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EA.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EB</td><td>{{ form.EB.help_text }}</td><td><input name='{{ form.EB.html_name }}' type='text' class='bigbox2' value="{{form.initial.EB|default:''}}"></td><td><input name='{{ form2.EB.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EB|default:''}}"></td><td><input name='{{form3.EB.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EB|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EB.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EC</td><td>{{ form.EC.help_text }}</td><td><input name='{{ form.EC.html_name }}' type='text' class='bigbox2' value="{{form.initial.EC|default:''}}"></td><td><input name='{{ form2.EC.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EC|default:''}}"></td><td><input name='{{form3.EC.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EC|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EC.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>ED</td><td>{{ form.ED.help_text }}</td><td><input name='{{ form.ED.html_name }}' type='text' class='bigbox2' value="{{form.initial.ED|default:''}}"></td><td><input name='{{ form2.ED.html_name }}' type='text' class='bigbox2' value="{{form2.initial.ED|default:''}}"></td><td><input name='{{form3.ED.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.ED|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.ED.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EE</td><td>{{ form.EE.help_text }}</td><td><input name='{{ form.EE.html_name }}' type='text' class='bigbox2' value="{{form.initial.EE|default:''}}"></td><td><input name='{{ form2.EE.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EE|default:''}}"></td><td><input name='{{form3.EE.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EE|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EE.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EF</td><td>{{ form.EF.help_text }}</td><td><input name='{{ form.EF.html_name }}' type='text' class='bigbox2' value="{{form.initial.EF|default:''}}"></td><td><input name='{{ form2.EF.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EF|default:''}}"></td><td><input name='{{form3.EF.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EF|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EF.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EG</td><td>{{ form.EG.help_text }}</td><td><input name='{{ form.EG.html_name }}' type='text' class='bigbox2' value="{{form.initial.EG|default:''}}"></td><td><input name='{{ form2.EG.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EG|default:''}}"></td><td><input name='{{form3.EG.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EG|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EG.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EH</td><td>{{ form.EH.help_text }}</td><td><input name='{{ form.EH.html_name }}' type='text' class='bigbox2' value="{{form.initial.EH|default:''}}"></td><td><input name='{{ form2.EH.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EH|default:''}}"></td><td><input name='{{form3.EH.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EH|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EH.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EJ</td><td>{{ form.EJ.help_text }}</td><td><input name='{{ form.EJ.html_name }}' type='text' class='bigbox2' value="{{form.initial.EJ|default:''}}"></td><td><input name='{{ form2.EJ.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EJ|default:''}}"></td><td><input name='{{form3.EJ.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EJ|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EJ.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EK</td><td>{{ form.EK.help_text }}</td><td><input name='{{ form.EK.html_name }}' type='text' class='bigbox2' value="{{form.initial.EK|default:''}}"></td><td><input name='{{ form2.EK.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EK|default:''}}"></td><td><input name='{{form3.EK.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EK|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EK.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EM</td><td>{{ form.EM.help_text }}</td><td><input name='{{ form.EM.html_name }}' type='text' class='bigbox2' value="{{form.initial.EM|default:''}}"></td><td><input name='{{ form2.EM.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EM|default:''}}"></td><td><input name='{{form3.EM.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EM|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EM.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EN</td><td>{{ form.EN.help_text }}</td><td><input name='{{ form.EN.html_name }}' type='text' class='bigbox2' value="{{form.initial.EN|default:''}}"></td><td><input name='{{ form2.EN.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EN|default:''}}"></td><td><input name='{{form3.EN.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EN|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EN.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EP</td><td>{{ form.EP.help_text }}</td><td><input name='{{ form.EP.html_name }}' type='text' class='bigbox2' value="{{form.initial.EP|default:''}}"></td><td><input name='{{ form2.EP.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EP|default:''}}"></td><td><input name='{{form3.EP.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EP|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EP.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EQ</td><td>{{ form.EQ.help_text }}</td><td><input name='{{ form.EQ.html_name }}' type='text' class='bigbox2' value="{{form.initial.EQ|default:''}}"></td><td><input name='{{ form2.EQ.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EQ|default:''}}"></td><td><input name='{{form3.EQ.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EQ|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EQ.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>ER</td><td>{{ form.ER.help_text }}</td><td><input name='{{ form.ER.html_name }}' type='text' class='bigbox2' value="{{form.initial.ER|default:''}}"></td><td><input name='{{ form2.ER.html_name }}' type='text' class='bigbox2' value="{{form2.initial.ER|default:''}}"></td><td><input name='{{form3.ER.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.ER|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.ER.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>ES</td><td>{{ form.ES.help_text }}</td><td><input name='{{ form.ES.html_name }}' type='text' class='bigbox2' value="{{form.initial.ES|default:''}}"></td><td><input name='{{ form2.ES.html_name }}' type='text' class='bigbox2' value="{{form2.initial.ES|default:''}}"></td><td><input name='{{form3.ES.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.ES|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.ES.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>ET</td><td>{{ form.ET.help_text }}</td><td><input name='{{ form.ET.html_name }}' type='text' class='bigbox2' value="{{form.initial.ET|default:''}}"></td><td><input name='{{ form2.ET.html_name }}' type='text' class='bigbox2' value="{{form2.initial.ET|default:''}}"></td><td><input name='{{form3.ET.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.ET|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.ET.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EU</td><td>{{ form.EU.help_text }}</td><td><input name='{{ form.EU.html_name }}' type='text' class='bigbox2' value="{{form.initial.EU|default:''}}"></td><td><input name='{{ form2.EU.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EU|default:''}}"></td><td><input name='{{form3.EU.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EU|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EU.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EV</td><td>{{ form.EV.help_text }}</td><td><input name='{{ form.EV.html_name }}' type='text' class='bigbox2' value="{{form.initial.EV|default:''}}"></td><td><input name='{{ form2.EV.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EV|default:''}}"></td><td><input name='{{form3.EV.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EV|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EV.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EW</td><td>{{ form.EW.help_text }}</td><td><input name='{{ form.EW.html_name }}' type='text' class='bigbox2' value="{{form.initial.EW|default:''}}"></td><td><input name='{{ form2.EW.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EW|default:''}}"></td><td><input name='{{form3.EW.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EW|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EW.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EX</td><td>{{ form.EX.help_text }}</td><td><input name='{{ form.EX.html_name }}' type='text' class='bigbox2' value="{{form.initial.EX|default:''}}"></td><td><input name='{{ form2.EX.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EX|default:''}}"></td><td><input name='{{form3.EX.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EX|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EX.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EY</td><td>{{ form.EY.help_text }}</td><td><input name='{{ form.EY.html_name }}' type='text' class='bigbox2' value="{{form.initial.EY|default:''}}"></td><td><input name='{{ form2.EY.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EY|default:''}}"></td><td><input name='{{form3.EY.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EY|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EY.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>EZ</td><td>{{ form.EZ.help_text }}</td><td><input name='{{ form.EZ.html_name }}' type='text' class='bigbox2' value="{{form.initial.EZ|default:''}}"></td><td><input name='{{ form2.EZ.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EZ|default:''}}"></td><td><input name='{{form3.EZ.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EZ|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EZ.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>FA</td><td>{{ form.FA.help_text }}</td><td><input name='{{ form.FA.html_name }}' type='text' class='bigbox2' value="{{form.initial.FA|default:''}}"></td><td><input name='{{ form2.FA.html_name }}' type='text' class='bigbox2' value="{{form2.initial.FA|default:''}}"></td><td><input name='{{form3.FA.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.FA|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.FA.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>FB</td><td>{{ form.FB.help_text }}</td><td><input name='{{ form.FB.html_name }}' type='text' class='bigbox2' value="{{form.initial.FB|default:''}}"></td><td><input name='{{ form2.FB.html_name }}' type='text' class='bigbox2' value="{{form2.initial.FB|default:''}}"></td><td><input name='{{form3.FB.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.FB|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.FB.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>FC</td><td>{{ form.FC.help_text }}</td><td><input name='{{ form.FC.html_name }}' type='text' class='bigbox2' value="{{form.initial.FC|default:''}}"></td><td><input name='{{ form2.FC.html_name }}' type='text' class='bigbox2' value="{{form2.initial.FC|default:''}}"></td><td><input name='{{form3.FC.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.FC|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.FC.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>FD</td><td>{{ form.FD.help_text }}</td><td><input name='{{ form.FD.html_name }}' type='text' class='bigbox2' value="{{form.initial.FD|default:''}}"></td><td><input name='{{ form2.FD.html_name }}' type='text' class='bigbox2' value="{{form2.initial.FD|default:''}}"></td><td><input name='{{form3.FD.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.FD|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.FD.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>FE</td><td>{{ form.FE.help_text }}</td><td><input name='{{ form.FE.html_name }}' type='text' class='bigbox2' value="{{form.initial.FE|default:''}}"></td><td><input name='{{ form2.FE.html_name }}' type='text' class='bigbox2' value="{{form2.initial.FE|default:''}}"></td><td><input name='{{form3.FE.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.FE|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.FE.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>FF</td><td>{{ form.FF.help_text }}</td><td><input name='{{ form.FF.html_name }}' type='text' class='bigbox2' value="{{form.initial.FF|default:''}}"></td><td><input name='{{ form2.FF.html_name }}' type='text' class='bigbox2' value="{{form2.initial.FF|default:''}}"></td><td><input name='{{form3.FF.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.FF|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.FF.name }}"></td>
+						    </tr>
+						    <tr>
+							<td>&nbsp;</td><td>FG</td><td>{{ form.FG.help_text }}</td><td><input name='{{ form.FG.html_name }}' type='text' class='bigbox2' value="{{form.initial.FG|default:''}}"></td><td><input name='{{ form2.FG.html_name }}' type='text' class='bigbox2' value="{{form2.initial.FG|default:''}}"></td><td><input name='{{form3.FG.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.FG|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.FG.name }}"></td>
+						    </tr>
+						    <tr>
 							<td colspan="3">&nbsp;</td><td colspan="4"><input type="submit" name="submit" value="Save" id="submit"></td>
 						    </tr>
 						</table>
