Update eday_checklist_form.html had some minor wordings fixed.

--- a/psc/templates/psc/eday_checklist_form.html
+++ b/psc/templates/psc/eday_checklist_form.html
@@ -137,7 +137,7 @@
 						    <tr>
 							<td>&nbsp;</td><td>CQ</td><td>{{ form.CQ.help_text }} <br />Yes <strong>(1)</strong> No <strong>(2)</strong> Unchecked <strong>(3)</strong></td><td><input name='{{ form.CQ.html_name }}' type='text' class='bigbox2' value="{{form.initial.CQ|default:''}}"></td><td><input name='{{ form2.CQ.html_name }}' type='text' class='bigbox2' value="{{form2.initial.CQ|default:''}}"></td><td><input name='{{form3.CQ.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.CQ|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.CQ.name }}"></td>
 						    </tr>
-						    <tr><td colspan="7" class="table_heading">Official Presidential Election Summary Information</td></tr>
+						    <tr><td colspan="7" class="table_heading">Official Election Summary Information</td></tr>
 						    <tr>
 							<td>&nbsp;</td><td>DA</td><td>{{ form.DA.help_text }}</td><td><input name='{{ form.DA.html_name }}' type='text' class='bigbox2' value="{{form.initial.DA|default:''}}"></td><td><input name='{{ form2.DA.html_name }}' type='text' class='bigbox2' value="{{form2.initial.DA|default:''}}"></td><td><input name='{{form3.DA.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.DA|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.DA.name }}"></td>
 						    </tr>
@@ -162,7 +162,7 @@
 						    <tr>
 							<td>&nbsp;</td><td>DH</td><td>{{ form.DH.help_text }}</td><td><input name='{{ form.DH.html_name }}' type='text' class='bigbox2' value="{{form.initial.DH|default:''}}"></td><td><input name='{{ form2.DH.html_name }}' type='text' class='bigbox2' value="{{form2.initial.DH|default:''}}"></td><td><input name='{{form3.DH.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.DH|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.DH.name }}"></td>
 						    </tr>
-						    <tr><td colspan="7" class="table_heading">Official Presidential Election Results</td></tr>
+						    <tr><td colspan="7" class="table_heading">Official Election Results</td></tr>
 						    <tr>
 							<td>&nbsp;</td><td>EA</td><td>{{ form.EA.help_text }}</td><td><input name='{{ form.EA.html_name }}' type='text' class='bigbox2' value="{{form.initial.EA|default:''}}"></td><td><input name='{{ form2.EA.html_name }}' type='text' class='bigbox2' value="{{form2.initial.EA|default:''}}"></td><td><input name='{{form3.EA.html_name}}' type='text' class='control_text bigbox2' value="{{form3.initial.EA|default:''}}"></td><td><input type='checkbox' class="control" name="override" value="{{ form3.EA.name }}"></td>
 						    </tr>
