Filter enabled for first, second, third, fourth and fifth sms for the eday_checklist.

--- a/psc/templates/psc/eday_checklist_list.html
+++ b/psc/templates/psc/eday_checklist_list.html
@@ -13,6 +13,9 @@
             $("#id_observer_id").val("");
 	    $("#id_first").val("");
 	    $("#id_second").val("");
+	    $("#id_third").val("");
+	    $("#id_fourth").val("");
+	    $("#id_fifth").val("");
             $("#filter_form").submit();
         });
 	$("#sndmsg_btn").toggle(function () {
