--- a/psc/templates/psc/eday_checklist_list.html
+++ b/psc/templates/psc/eday_checklist_list.html
@@ -185,40 +185,35 @@
                             <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
                         </td>
 						<td class="checklist">
-						{# if the other checklist has no value for a particular field of interest then we have no conflict #}
-						{% expr ((cl.AA == cl.other.AA) or not cl.other.AA or not cl.AA) as flag1 %}
-						{% if flag1 %}
+						{% if cl.flag1 %}
                             <img src="/assets/img/status.png" width="16" height="16" alt="ok" />
 						{% else %}
 							<img src="/assets/img/status-busy.png" width="16" height="16" alt="conflict" />
 						{% endif %}
                         </td>
 						<td class="checklist">
-						{% expr (cl.BA == cl.other.BA or not cl.other.BA or not cl.BA) and (cl.BB == cl.other.BB or not cl.other.BB or not cl.BB) and (cl.BC == cl.other.BC or not cl.other.BC or not cl.BC) and (cl.BD == cl.other.BD or not cl.other.BD or not cl.BD) and (cl.BE == cl.other.BE or not cl.other.BE or not cl.BE) and (cl.BF == cl.other.BF or not cl.other.BF or not cl.BF) and (cl.BG == cl.other.BG or not cl.other.BG or not cl.BG) and (cl.BH == cl.other.BH or not cl.other.BH or not cl.BH) and (cl.BJ == cl.other.BJ or not cl.other.BJ or not cl.BJ) and (cl.BK == cl.other.BK or not cl.other.BK or not cl.BK) and (cl.BM == cl.other.BM or not cl.other.BM or not cl.BM) and (cl.BN == cl.other.BN or not cl.other.BN or not cl.BN) and (cl.BP == cl.other.BP or not cl.other.BP or not cl.BP) as flag2 %}
-						{% if flag2 %}
+						{% if cl.flag2 %}
                             <img src="/assets/img/status.png" width="16" height="16" alt="ok" />
 						{% else %}
 							<img src="/assets/img/status-busy.png" width="16" height="16" alt="conflict" />
 						{% endif %}
                         </td>
 						<td class="checklist">
-						{% expr (cl.CA == cl.other.CA or not cl.other.CA or not cl.CA) and (cl.CB == cl.other.CB or not cl.other.CB or not cl.CB) and (cl.CC == cl.other.CC or not cl.other.CC or not cl.CC) and (cl.CD == cl.other.CD or not cl.other.CD or not cl.CD) and (cl.CE == cl.other.CE or not cl.other.CE or not cl.CE) and (cl.CF == cl.other.CF or not cl.other.CF or not cl.CF) and (cl.CG == cl.other.CG or not cl.other.CG or not cl.CG) and (cl.CH == cl.other.CH or not cl.other.CH or not cl.CH) and (cl.CJ == cl.other.CJ or not cl.other.CJ or not cl.CJ) and (cl.CK == cl.other.CK or not cl.other.CK or not cl.CK) and (cl.CM == cl.other.CM or not cl.other.CM or not cl.CM) and (cl.CN == cl.other.CN or not cl.other.CN or not cl.CN) and (cl.CP == cl.other.CP or not cl.other.CP or not cl.CP) and (cl.CP == cl.other.CQ or not cl.other.CQ or not cl.CQ) as flag3 %}
-						{% if flag3 %}
+						{% if cl.flag3 %}
                             <img src="/assets/img/status.png" width="16" height="16" alt="ok" />
 						{% else %}
 							<img src="/assets/img/status-busy.png" width="16" height="16" alt="conflict" />
 						{% endif %}
                         </td>
 						<td class="checklist">
-						{% expr (cl.DA == cl.other.DA or not cl.other.DA or not cl.DA) and (cl.DB == cl.other.DB or not cl.other.DB or not cl.DB) and (cl.DC == cl.other.DC or not cl.other.DC or not cl.DC) and (cl.DD == cl.other.DD or not cl.other.DD or not cl.DD) and (cl.DE == cl.other.DE or not cl.other.DE or not cl.DE) and (cl.DF == cl.other.DF or not cl.other.DF or not cl.DF) and (cl.DG == cl.other.DG or not cl.other.DG or not cl.DG) and (cl.DH == cl.other.DH or not cl.other.DH or not cl.DH) as flag4 %}
-						{% if flag4 %}
+						{% if cl.flag4 %}
                             <img src="/assets/img/status.png" width="16" height="16" alt="ok" />
 						{% else %}
 							<img src="/assets/img/status-busy.png" width="16" height="16" alt="conflict" />
 						{% endif %}
                         </td>
 						<td class="checklist" id="results_flags">
-						{% if flag5 %}
+						{% if cl.flag5 %}
                             <img src="/assets/img/status.png" width="16" height="16" alt="ok" />
 						{% else %}
 							<img src="/assets/img/status-busy.png" width="16" height="16" alt="conflict" />
