--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -109,11 +109,11 @@
                                 <h2 class="dashboard-header"><a href="#">EDAY Incidents</a></h2>
                                 <div class="dash-row">
                                      <div class="dash-column first">Incidents rec'd today</div>
-                                     <div class="dash-column second"><span>{{ eday_incidents_today }}</span></div>
+                                     <div class="dash-column second" id="eday_incidents_today"><span>{{ eday_incidents_today|default:"0" }}</span></div>
                                 </div>                                
                                  <div class="dash-row">
                                      <div class="dash-column first">Total incidents rec'd</div>
-                                     <div class="dash-column second"><span>{{ eday_incidents_count }}</span></div>
+                                     <div class="dash-column second" id="eday_incidents_count"><span>{{ eday_incidents_count|default:"0" }}</span></div>
                                 </div>
                                 <div class="dash-row last">
                                      <div class="dash-text">{% if perms.psc.can_manage_data %}<a href="{% url psc.views.eday_incident_add %}">(Add Incident)</a>{% endif %} | {% if perms.psc.can_manage_data %}<a href="{% url psc.views.eday_incident_list %}">(View All)</a>{% endif %}</div>
