specified default values for missing email address and name

--- a/psc/templates/psc/contact_edit.html
+++ b/psc/templates/psc/contact_edit.html
@@ -32,7 +32,7 @@
 			<tr><td width="30%">Polling Unit:</td><td><strong>{% if contact.role == 'NSC' or contact.role == 'NS' or contact.role == 'SC' or contact.role == 'SDC' or contact.role == 'RC' or contact.role == 'LGA' %}Unknown{% endif %}
 									  {% if contact.role == 'OBS' %}{{ contact.location.name }}{% endif %}</strong></td></tr>
 			<tr><td width="30%">PSC ID:</td><td><strong>{{ contact.observer_id }}</strong></td></tr>
-			<tr><td width="30%">Name:</td><td><input type="text" class="bigbox" name="name" value="{{ contact.name }}" /></td></tr>
+			<tr><td width="30%">Name:</td><td><input type="text" class="bigbox" name="name" value="{{ contact.name|default:"" }}" /></td></tr>
 			<tr><td>Gender:</td><td>
 			<select class="bigbox" name="{{ form.gender.name }}">
 			    <option value="M" {% if form.initial.gender == 'M' %}selected="selected"{% endif %}>Male</option>
@@ -41,7 +41,7 @@
 			</select>
 			</td></tr>
 			<tr><td>Observer Phone No.:</td><td><input type="text" class="bigbox" name="{{ form.phone.name }}" value="{{ form.initial.phone|default:""  }}" /></td></tr>
-			<tr><td>E-mail:</td><td><input type="text" class="bigbox" name="{{ form.email.name }}" value="{{ form.initial.email }}" /></td></tr>
+			<tr><td>E-mail:</td><td><input type="text" class="bigbox" name="{{ form.email.name }}" value="{{ form.initial.email|default:"" }}" /></td></tr>
 			<tr><td>Partner:</td>
 			<td>
 			<select class="bigbox" name="{{ form.partner.name }}">
